tags/2013-08-29_cppreference/Archive/2b56b8823d472d1cc5c6cc600346acb9-41215fa5668b0384e580f21cc5e8e2fe/output
+ clang++ -S -std=c++11 -O2 main.cpp -o -
main.cpp:2:16: error: constexpr variable 'y' must be initialized by a constant expression
constexpr char y = *p1;
               ^   ~~~
main.cpp:2:20: note: read of non-constexpr variable 'p1' is not allowed in a constant expression
constexpr char y = *p1;
                   ^
main.cpp:1:12: note: declared here
const char p1[] = "asdf";
           ^
1 error generated.
